Service logging, client timeouts & serialisation
