# pkg/swagger/server/restapi/operations/v_sphere_get_all_vm_summary.go
@@ -6,14 +6,9 @@ package operations
 // Editing this file might prove futile when you re-run the generate command
 
 import (
-	"context"
 	"net/http"
-	"strconv"
 
-	"github.com/go-openapi/errors"
 	"github.com/go-openapi/runtime/middleware"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
 )
 
 // VSphereGetAllVMSummaryHandlerFunc turns a function with the right signature into a v sphere get all VM summary handler
@@ -58,177 +53,4 @@ func (o *VSphereGetAllVMSummary) ServeHTTP(rw http.ResponseWriter, r *http.Reque
 	res := o.Handler.Handle(Params) // actually handle the request
 	o.Context.Respond(rw, r, route.Produces, route, res)
 
-}
-
-// VSphereGetAllVMSummaryOKBody v sphere get all VM summary o k body
-//
-// swagger:model VSphereGetAllVMSummaryOKBody
-type VSphereGetAllVMSummaryOKBody struct {
-
-	// count
-	Count int64 `json:"count,omitempty"`
-
-	// results
-	Results []*VSphereGetAllVMSummaryOKBodyResultsItems0 `json:"results"`
-}
-
-// Validate validates this v sphere get all VM summary o k body
-func (o *VSphereGetAllVMSummaryOKBody) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := o.validateResults(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (o *VSphereGetAllVMSummaryOKBody) validateResults(formats strfmt.Registry) error {
-	if swag.IsZero(o.Results) { // not required
-		return nil
-	}
-
-	for i := 0; i < len(o.Results); i++ {
-		if swag.IsZero(o.Results[i]) { // not required
-			continue
-		}
-
-		if o.Results[i] != nil {
-			if err := o.Results[i].Validate(formats); err != nil {
-				if ve, ok := err.(*errors.Validation); ok {
-					return ve.ValidateName("vSphereGetAllVmSummaryOK" + "." + "results" + "." + strconv.Itoa(i))
-				} else if ce, ok := err.(*errors.CompositeError); ok {
-					return ce.ValidateName("vSphereGetAllVmSummaryOK" + "." + "results" + "." + strconv.Itoa(i))
-				}
-				return err
-			}
-		}
-
-	}
-
-	return nil
-}
-
-// ContextValidate validate this v sphere get all VM summary o k body based on the context it is used
-func (o *VSphereGetAllVMSummaryOKBody) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	var res []error
-
-	if err := o.contextValidateResults(ctx, formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (o *VSphereGetAllVMSummaryOKBody) contextValidateResults(ctx context.Context, formats strfmt.Registry) error {
-
-	for i := 0; i < len(o.Results); i++ {
-
-		if o.Results[i] != nil {
-
-			if swag.IsZero(o.Results[i]) { // not required
-				return nil
-			}
-
-			if err := o.Results[i].ContextValidate(ctx, formats); err != nil {
-				if ve, ok := err.(*errors.Validation); ok {
-					return ve.ValidateName("vSphereGetAllVmSummaryOK" + "." + "results" + "." + strconv.Itoa(i))
-				} else if ce, ok := err.(*errors.CompositeError); ok {
-					return ce.ValidateName("vSphereGetAllVmSummaryOK" + "." + "results" + "." + strconv.Itoa(i))
-				}
-				return err
-			}
-		}
-
-	}
-
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (o *VSphereGetAllVMSummaryOKBody) MarshalBinary() ([]byte, error) {
-	if o == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(o)
-}
-
-// UnmarshalBinary interface implementation
-func (o *VSphereGetAllVMSummaryOKBody) UnmarshalBinary(b []byte) error {
-	var res VSphereGetAllVMSummaryOKBody
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*o = res
-	return nil
-}
-
-// VSphereGetAllVMSummaryOKBodyResultsItems0 v sphere get all VM summary o k body results items0
-//
-// swagger:model VSphereGetAllVMSummaryOKBodyResultsItems0
-type VSphereGetAllVMSummaryOKBodyResultsItems0 struct {
-
-	// cpu
-	CPU int64 `json:"cpu,omitempty"`
-
-	// guest full name
-	GuestFullName string `json:"guestFullName,omitempty"`
-
-	// hardware version
-	HardwareVersion string `json:"hardwareVersion,omitempty"`
-
-	// memory m b
-	MemoryMB int64 `json:"memoryMB,omitempty"`
-
-	// moref
-	Moref string `json:"moref,omitempty"`
-
-	// name
-	Name string `json:"name,omitempty"`
-
-	// number disks
-	NumberDisks int64 `json:"numberDisks,omitempty"`
-
-	// number n i cs
-	NumberNICs int64 `json:"numberNICs,omitempty"`
-
-	// powerstate
-	Powerstate string `json:"powerstate,omitempty"`
-
-	// status
-	Status string `json:"status,omitempty"`
-}
-
-// Validate validates this v sphere get all VM summary o k body results items0
-func (o *VSphereGetAllVMSummaryOKBodyResultsItems0) Validate(formats strfmt.Registry) error {
-	return nil
-}
-
-// ContextValidate validates this v sphere get all VM summary o k body results items0 based on context it is used
-func (o *VSphereGetAllVMSummaryOKBodyResultsItems0) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (o *VSphereGetAllVMSummaryOKBodyResultsItems0) MarshalBinary() ([]byte, error) {
-	if o == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(o)
-}
-
-// UnmarshalBinary interface implementation
-func (o *VSphereGetAllVMSummaryOKBodyResultsItems0) UnmarshalBinary(b []byte) error {
-	var res VSphereGetAllVMSummaryOKBodyResultsItems0
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*o = res
-	return nil
 }
